...
                                        <rect key="frame" x="0.0" y="128" width="370" height="52"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="52" id="6ny-YG-0fk"/>
                                        </constraints>
                                        <color key="tintColor" red="0.94901967050000002" green="0.85098040100000005" blue="0.78431367870000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Login" cornerStyle="capsule">
                                            <backgroundConfiguration key="background" strokeWidth="2">
                                                <color key="backgroundColor" red="0.94901967050000002" green="0.85098040100000005" blue="0.78431367870000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <color key="strokeColor" red="0.76862752440000004" green="0.69019609689999994" blue="0.64705884459999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                            </backgroundConfiguration>
                                        </buttonConfiguration>
                                        <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CVa-f9-mH7">
                                <rect key="frame" x="20" y="821" width="400" height="39"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="39" id="5yg-LV-rH1"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Exit">
                                    <backgroundConfiguration key="background" cornerRadius="20" strokeWidth="4">
                                        <color key="backgroundColor" red="0.80000000000000004" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <color key="strokeColor" red="0.59999999999999998" green="0.40000000000000002" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                    </backgroundConfiguration>
                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
...
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name Surname" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0CN-io-E2E">
                                <rect key="frame" x="20" y="370" width="390" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personal Information" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BeG-Um-BMM">
                                <rect key="frame" x="20" y="74" width="400" height="43"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="bQZ-aF-oy3"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="25"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
            <point key="canvasLocation" x="1555.8139534883721" y="2315.6652360515022"/>
        </scene>
        <!--Profile-->
        <scene sceneID="rC8-BA-tvJ">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="u7T-yc-Y0z" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="person.crop.circle.fill" catalog="system" id="pYz-Rq-s8a">
                        <color key="badgeColor" red="0.59999999999999998" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hM5-Ur-3no">
                        <rect key="frame" x="0.0" y="0.0" width="430" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
...
